fix: remove title detail

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -16,13 +16,13 @@ block content
     main.home
         section.hero
             .hero--wrap
-                picture(class="sustainability")
+                picture(class="sustainability", ide="45")
                     source(srcset='img/images1.jpg' )
                     img.img-fluid(src='img/images1.jpg' alt)
-                picture(class="sustainability")
+                picture(class="sustainability", ide="50")
                     source(srcset='img/images1.jpg' )
                     img.img-fluid(src='img/layout5.jpg' alt)
-                picture(class="sustainability")
+                picture(class="sustainability", ide="99")
                     source(srcset='img/images1.jpg' )
                     img.img-fluid(src='img/images1.jpg' alt)
                 picture(class="sustainability")
@@ -61,6 +61,7 @@ block content
 
                                 h5.hero--wrap--hover--project--subcat.
                                     Experimental
+
                     a.sustainability(href="project-home.html") 
                         .hero--wrap--hover--project#198
                             h6 PROJECT
@@ -133,47 +134,103 @@ block content
         section.projects-home
             .container-fluid
                 .row
-                    - var n = 0;
-                    while n < 29
-                        - ++n
-                        .col-lg-4.col-12(categoria="imagination")
-                            .projects-grid--wrap
-                                .projects-home__card__images__img(categoria='1 Worl Trade Center')
-                                    picture
-                                        source(srcset='img/images1.jpg' alt)
-                                        img.img-fluid(src='img/images1.jpg' alt)
+                    .proyecto.layering#45(categoria='Layering')
+                        img(src="")
+                        a
+                            h5.projects-home__card__hover__title Layering 1
 
-                                .projects-home__card__images__img(categoria='2')
-                                    picture
-                                        source(srcset='img/images1.jpg' alt)
-                                        img.img-fluid(src='img/images1.jpg' alt)
+                    //- .proyecto.layering#10(categoria='Layering')
+                    //-     img(src="")
+                    //-     a
+                    //-         h5.projects-home__card__hover__title Layering 2
 
-                                .projects-home__card__images__img(categoria='3')
-                                    picture
-                                        source(srcset='img/images1.jpg' alt)
-                                        img.img-fluid(src='img/images1.jpg' alt)
+                    .proyecto.layering(categoria='Layering', ide="45")
+                        img(src="")
+                        a
+                            h5.projects-home__card__hover__title Layering 3
 
-                            h3.projects-home__card__title 
-                                | Typology 
+                    .proyecto.layering#61(categoria='Layering', ide="50")
+                        img(src="")
+                        a
+                            h5.projects-home__card__hover__title Layering 4
 
-                            a.linkCard(href="project-home.html")
+                    .proyecto.photo#12(categoria='Photo', ide="99")
+                        img(src="")
+                        a
+                            h5.projects-home__card__hover__title Photo 1
 
-                            .projects-home__card__hover__projects
-                                .btnHoverGridInt
-                                h5.title-categoria PROJECTS
+                    .proyecto.photo#31(categoria='Photo')
+                        img(src="")
+                        a
+                            h5.projects-home__card__hover__title Photo 2
 
-                                .projects-home__card__hover__projects__links
+                    .proyecto.photo#77(categoria='Photo')
+                        img(src="")
+                        a
+                            h5.projects-home__card__hover__title Photo 3
 
-                                    a(href="project-detail.html")
-                                        h5.projects-home__card__hover__title Worl Trade Center
+                    .proyecto.photo#100(categoria='Photo')
+                        img(src="")
+                        a
+                            h5.projects-home__card__hover__title Photo 4
 
-                                    a(href="project-detail.html")
-                                        h5.projects-home__card__hover__title Transparencias
+                    .proyecto.photo#87(categoria='Photo')
+                        img(src="")
+                        a
+                            h5.projects-home__card__hover__title Photo 5
 
-                                    a(href="project-detail.html") 
-                                        h5.projects-home__card__hover__title Agricultura
+                    .proyecto.imagin#55(categoria='Imagin')
+                        img(src="")
+                        a
+                            h5.projects-home__card__hover__title Imagin 1
 
-                                h4 Typology 
+                    .proyecto.woven-together#66(categoria='Woven Together')
+                        img(src="")
+                        a
+                            h5.projects-home__card__hover__title Waven 1
+
+
+                    //- - var n = 0;
+                    //- while n < 29
+                    //-     - ++n
+                    //-     .col-lg-4.col-12(categoria="imagination")
+                    //-         .projects-grid--wrap
+                    //-             .projects-home__card__images__img(categoria='1 Worl Trade Center')
+                    //-                 picture
+                    //-                     source(srcset='img/images1.jpg' alt)
+                    //-                     img.img-fluid(src='img/images1.jpg' alt)
+
+                    //-             .projects-home__card__images__img(categoria='2')
+                    //-                 picture
+                    //-                     source(srcset='img/images1.jpg' alt)
+                    //-                     img.img-fluid(src='img/images1.jpg' alt)
+
+                    //-             .projects-home__card__images__img(categoria='3')
+                    //-                 picture
+                    //-                     source(srcset='img/images1.jpg' alt)
+                    //-                     img.img-fluid(src='img/images1.jpg' alt)
+
+                    //-         h3.projects-home__card__title 
+                    //-             | Typology 
+
+                    //-         a.linkCard(href="project-home.html")
+
+                    //-         .projects-home__card__hover__projects
+                    //-             .btnHoverGridInt
+                    //-             h5.title-categoria PROJECTS
+
+                    //-             .projects-home__card__hover__projects__links
+
+                    //-                 a(href="project-detail.html")
+                    //-                     h5.projects-home__card__hover__title Worl Trade Center
+
+                    //-                 a(href="project-detail.html")
+                    //-                     h5.projects-home__card__hover__title Transparencias
+
+                    //-                 a(href="project-detail.html") 
+                    //-                     h5.projects-home__card__hover__title Agricultura
+
+                    //-             h4 Typology 
 
                     .col-lg-4.col-12.projects-home__acceso.projects-home__acceso--projects
                         a(href='projects.html')
@@ -189,5 +246,226 @@ block content
                 h2.break#break4 Sometimes I do write for the sake of argument, because I think it is an interesting topic and I want to see how the discussion can go, a sort of devil’s advocateand the text goes further here.
                 h2.break#break5 Sometimes I do write for the sake of argument, because I think it is an interesting topic and I want to see how the discussion can go, a sort of devil’s advocateand the text goes further here.
 
-        include includes/footer.pug
+        script.
+            const removeDuplicado = () => {
+                const cadaveresHero = document.querySelectorAll(".hero--wrap picture");
+                const cadaveres = document.querySelectorAll(".proyecto");
+                const ideHero = "";
+
+                for(cadaveresHeroEl of cadaveresHero){
+                    ideHero = cadaveresHeroEl.getAttribute("ide");
+                }
+
+
+                for(cadaveresEl of cadaveres){
+                    const ide = cadaveresEl.getAttribute("ide");
+                    //- console.log(ide);
+                }
+            }
+
+            //- removeDuplicado();
+
+            const f2 = () => {
+
+                const proyectos = document.querySelectorAll(".proyecto");
+
+                for (const proyectosEl of proyectos) {
+                    let catProyect = proyectosEl.getAttribute("categoria").toLowerCase().replace(" ", "-");
+                    let titleProyect = proyectosEl.getAttribute("categoria");
+                    let nameProyect = proyectosEl.getAttribute("name");
+                    let idProyect = proyectosEl.getAttribute("ide");
+
+
+                    const elements = document.querySelectorAll(".projects-home ." + catProyect);
+                    // const elements = document.querySelectorAll(".proyecto[categoria="+catProyect+"]");
+                    const container = document.querySelector('.projects-home .row');
+                    let count = 0;
+                    let div, gridWrap, h3, a, wrapHover, h5, wrapLinks, titleHover, spanHover, btnHover;
+
+                    elements.forEach(function(element) {
+                        if (count % 3 === 0) {
+                            div = document.createElement('div');
+                            div.classList.add("col-lg-4", "col-12", "cadaver");
+                            div.setAttribute("categoria", catProyect);
+                            container.appendChild(div);
+
+                            gridWrap = document.createElement('div');
+                            gridWrap.classList.add("projects-grid--wrap");
+                            div.appendChild(gridWrap);
+
+                            h3 = document.createElement('h3');
+                            h3.classList.add("projects-home__card__title");
+                            h3.innerText = nameProyect;
+                            div.appendChild(h3);
+
+                            a = document.createElement('a');
+                            a.classList.add("linkCard");
+                            a.setAttribute("href", "https://linked-space.com/project-home/?ids=" + idProyect);
+                            div.appendChild(a);
+
+                            wrapHover = document.createElement('div');
+                            wrapHover.classList.add("projects-home__card__hover__projects");
+                            div.appendChild(wrapHover);
+
+                            h5 = document.createElement('h5');
+                            h5.classList.add("title-categoria");
+                            h5.innerText = "PROJECTS";
+                            wrapHover.appendChild(h5);
+
+                            wrapLinks = document.createElement('div');
+                            wrapLinks.classList.add("projects-home__card__hover__projects__links");
+                            wrapHover.appendChild(wrapLinks);
+
+                            titleHover = document.createElement('h4');
+                            wrapHover.appendChild(titleHover);
+
+                            spanHover = document.createElement('span');
+                            spanHover.innerText = nameProyect;
+                            titleHover.appendChild(spanHover);
+
+                            btnHover = document.createElement('div');
+                            btnHover.classList.add("btnHoverGridInt");
+                            titleHover.appendChild(btnHover);
+
+                        }
+
+                        // gridWrap.appendChild(element);
+                        gridWrap.insertAdjacentElement("afterbegin", element);
+                        count++;
+                    });
+
+                }
+
+
+                const parenLink = document.querySelectorAll(".cadaver");
+                for (const parenLinkEl of parenLink) {
+                    let linksProyect = parenLinkEl.querySelectorAll(".proyecto a");
+
+                    for (const linksProyectElem of linksProyect) {
+                        parenLinkEl.querySelector(".projects-home__card__hover__projects__links").insertAdjacentElement("afterbegin", linksProyectElem);
+
+                    }
+
+                    ///
+
+                    let idProy = parenLinkEl.querySelectorAll(".proyecto");
+                    const ids = [];
+                    for (const idProyEl of idProy) {
+                        const linkCard = parenLinkEl.querySelector(".linkCard");
+                        ids.push(idProyEl.getAttribute("ide"));
+                        const newIds = ids.join("?");
+                        linkCard.setAttribute("href", "https://linked-space.com/project-home/?ids=" + newIds);
+                    }
+
+                }
+            }
+
+            f2();
+
+            const removeVacios = () => {
+                const parenLink = document.querySelectorAll(".cadaver");
+                for (const parenLinkEl of parenLink) {
+                    const hijo = parenLinkEl.querySelector(".projects-grid--wrap");
+
+                    if (!hijo.hasChildNodes()) {
+                        // parenLinkEl.classList.add("remove");
+                        parenLinkEl.remove();
+                    }
+                }
+            };
+
+            removeVacios();
+
+            const random = () => {
+                const divs = document.querySelectorAll('.cadaver');
+                const divsArray = Array.from(divs);
+
+                function shuffleArray(array) {
+                    for (let i = array.length - 1; i > 0; i--) {
+                        const j = Math.floor(Math.random() * (i + 1));
+                        [array[i], array[j]] = [array[j], array[i]];
+                    }
+                    return array;
+                }
+
+                const shuffledDivs = shuffleArray(divsArray);
+
+                const container = document.querySelector('.projects-home .row');
+                container.innerHTML = '';
+                shuffledDivs.forEach(div => container.appendChild(div));
+
+            }
+
+            random();
+
+
+            ///// ORDER GRID
+            const descansos = () => {
+                const cardsHome = document.querySelectorAll(".projects-home .col-lg-4");
+
+                const break1 = document.querySelector("#break1");
+                const break2 = document.querySelector("#break2");
+                const break3 = document.querySelector("#break3");
+                const break4 = document.querySelector("#break4");
+                const break5 = document.querySelector("#break5");
+                const break6 = document.querySelector("#break6");
+                const break7 = document.querySelector("#break7");
+                const break8 = document.querySelector("#break8");
+                const break9 = document.querySelector("#break9");
+                const break10 = document.querySelector("#break10");
+
+                ///// BREAKS
+
+                for (let index = 0; index < cardsHome.length; index++) {
+
+                    if (cardsHome.length > 6) {
+                        cardsHome[5].insertAdjacentElement("afterend", break1);
+                        break1.classList.add("active");
+                    }
+
+                    if (cardsHome.length > 12) {
+                        cardsHome[11].insertAdjacentElement("afterend", break2);
+                        break2.classList.add("active");
+                    }
+
+                    if (cardsHome.length > 18) {
+                        cardsHome[17].insertAdjacentElement("afterend", break3);
+                        break3.classList.add("active");
+                    }
+
+                    if (cardsHome.length > 21) {
+                        cardsHome[20].insertAdjacentElement("afterend", break4);
+                        break4.classList.add("active");
+                    }
+
+                    if (cardsHome.length > 27) {
+                        cardsHome[26].insertAdjacentElement("afterend", break5);
+                        break5.classList.add("active");
+                    }
+                    if (cardsHome.length > 33) {
+                        cardsHome[32].insertAdjacentElement("afterend", break6);
+                        break6.classList.add("active");
+                    }
+                    if (cardsHome.length > 39) {
+                        cardsHome[38].insertAdjacentElement("afterend", break7);
+                        break7.classList.add("active");
+                    }
+                    if (cardsHome.length > 45) {
+                        cardsHome[44].insertAdjacentElement("afterend", break8);
+                        break8.classList.add("active");
+                    }
+                    if (cardsHome.length > 51) {
+                        cardsHome[50].insertAdjacentElement("afterend", break9);
+                        break9.classList.add("active");
+                    }
+                    if (cardsHome.length > 57) {
+                        cardsHome[56].insertAdjacentElement("afterend", break10);
+                        break10.classList.add("active");
+                    }
+                }
+            };
+
+            descansos();
+
+    include includes/footer.pug
     include includes/modal-connect.pug
