--- a/src/pug/project-detail.pug
+++ b/src/pug/project-detail.pug
@@ -25,7 +25,12 @@ block content
                 h1.text-center PROJECTS
                 .row.project__item--row
                     .col-lg-2.project__item--info
-                        h5.project__item--info--cat EXPERIMENTALISMI
+                        //- a(href="https://linked-space.com/project-home/?ids=1097?1525?1549")
+                        //-     h5.project__item--info--cat EXPERIMENTALISMI
+
+                        a(href="https://linked-space.com/project-home/?ids=1190")
+                            h5.project__item--info--cat EXPERIMENTALISMI
+
                         .project__item
                             h6 PROJECT
                             h4.project__name EXPERIMENTALISMI
@@ -178,7 +183,7 @@ block content
                                         h5.projects-home__card__hover__title Worl Trade Center
 
                                 h4 Typology 
-                                    
+
 
 
     include includes/footer.pug
