--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -15,9 +15,9 @@
         margin-bottom: 5em;
     }
 
-    .row {
-        row-gap: 60px;
-    }
+    // .row {
+    //     row-gap: 60px;
+    // }
 
     .col-lg-4 {
         transition: 0.4s ease-in-out all;
