--- a/src/scss/pages/_project-home.scss
+++ b/src/scss/pages/_project-home.scss
@@ -142,19 +142,18 @@
 }
 
 @media (max-width: 1024px) {
-
     .projects-home {
         .grid {
-            .grid--wrap>a:nth-child(odd) .project__item{
+            .grid--wrap > a:nth-child(odd) .project__item {
                 margin-left: 0;
             }
 
-            .project__item{
+            .project__item {
                 width: 100% !important;
                 margin-bottom: 30px;
                 column-gap: 0;
 
-                .row{
+                .row {
                     column-gap: 0;
                 }
             }
@@ -218,17 +217,26 @@
                 }
             }
 
-            .grid--head>.row{
-                flex-direction: column-reverse;
+            &--head {
+                padding: var(--bs-gutter-x, 2rem);
+                max-width: none;
             }
-            
+            &__description {
+                h3 > :not(sup) {
+                    font-size: var(--h1);
+                }
+            }
+
+            // .grid--head > .row {
+            //     flex-direction: column-reverse;
+            // }
         }
     }
 }
 
 @media (max-width: 768px) {
     .projects-home {
-        padding-top: 6em !important;
+        padding-top: 1em !important;
 
         h1 {
             margin-bottom: 2.5em;
@@ -236,6 +244,8 @@
 
         .grid {
             &--head {
+                padding: 0 var(--bs-gutter-x, 0.75rem);
+
                 & > .par {
                     .project__item .row {
                         flex-direction: row-reverse;
@@ -252,6 +262,7 @@
                 order: 2;
                 position: relative;
                 gap: 0;
+                margin-top: 60px;
 
                 .row {
                     padding-bottom: 0;
@@ -347,6 +358,13 @@
                         }
                     }
                 }
+            }
+        }
+
+        #quotes-one,
+        #quotes-two {
+            & > * {
+                padding: 0 15px;
             }
         }
     }
